# condottiere

./: Cargo.toml  README.md  book.toml
assets/texture/: single-pixel.ron
book/: book.toml
book/src/: SUMMARY.md
book/src/game/: landing.md  notes.md
book/src/journal/: case_study_ww1.md  orders.md  unit_sizes.md
book/src/technical/: landing.md
config/: display.ron
src/: main.rs
src/components/: equipment.rs  mod.rs  projectile.rs  terrain.rs  unit.rs
src/resources/: camera.rs  faction_registry.rs  map_registry.rs  mod.rs  sprites_registry.rs  vision_registry.rs
src/resources/map_generators/: linear_map.rs  mod.rs
src/resources/ui/: mod.rs
src/state/: demo.rs  game_state.rs  mod.rs
src/state/helpers/: equipment.rs  mod.rs  units.rs
src/systems/: battle.rs  mod.rs  unit_orders.rs  utils.rs
src/systems/orders/: effects_system.rs  mod.rs  order_creator.rs  order_executor.rs
src/systems/rendering/: mod.rs  new_renders.rs  projectiles.rs
src/utils/: camera.rs  collections.rs  mod.rs  movement.rs  sprites.rs
