[package]
name = "condottiere"
version = "0.2.0"
authors = ["Thomas Frantz <thomas.albert.frantz@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = {version = "^0.15", features = ["no-slow-safety-checks"]}
rand = "^0.8"
bresenham = "^0.1"
petgraph = "^0.6"
approx = "0.5.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
